<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPaciente.Configuracion.ActualizarImagen"
    android:background="@color/colorFondoLogin"
    android:padding="15dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/ivBack"
        android:background="@drawable/button_ripple_gray"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@mipmap/back_icon_orange"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/actualizar_foto" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivImagenConfiguracion"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@mipmap/profile_icon"
        android:layout_gravity="center"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro"
        android:gravity="center"
        android:text="@string/header_imagen"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="16dp" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:gravity="center"
        android:fontFamily="@font/sfpro"
        android:text="@string/sube_una_foto"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/bSeleccionarImagen"
        android:background="@drawable/button_rounded_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/sfpro"
        android:text="@string/seleccionar_imagen"
        android:textColor="@color/colorFondoLogin"
        android:layout_marginTop="24dp"
        android:paddingVertical="1dp"
        android:paddingHorizontal="24dp"/>

    <Button
        android:id="@+id/bActualizarImagen"
        android:layout_width="140dp"
        android:layout_height="75dp"
        android:layout_gravity="end"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded_contorn_orange"
        android:contentDescription="@string/eliminar_cuenta"
        android:drawableStart="@mipmap/submit_icon_orange"
        android:padding="16dp"
        android:text="@string/listo"
        android:textColor="@color/colorOrangeFuerte"/>

</LinearLayout>