<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuMedico.Home.HomeMedicoFragment"
    android:background="@color/colorFondoClaro"
    android:padding="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/llMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivMale"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/male" />
            <TextView
                android:id="@+id/tvMale"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/sfpro"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivFemale"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/female_grau"/>
            <TextView
                android:id="@+id/tvFemale"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:fontFamily="@font/sfpro"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/altura"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:fontFamily="@font/sfpro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/minusAltura"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:src="@mipmap/minus"/>
        <EditText
            android:id="@+id/tvAltura"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/altura_number"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:fontFamily="@font/sfpro"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters"
            android:textColor="@color/text_color"
            android:textSize="23sp"
            android:fontFamily="@font/sfpro"/>
        <ImageView
            android:id="@+id/plusAltura"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:src="@mipmap/plus"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:fontFamily="@font/sfpro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/minusPeso"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:src="@mipmap/minus"/>
        <EditText
            android:id="@+id/tvPeso"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/peso_number"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:fontFamily="@font/sfpro"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilog"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:fontFamily="@font/sfpro"/>
        <ImageView
            android:id="@+id/plusPeso"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:src="@mipmap/plus"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/imc"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:fontFamily="@font/sfpro"/>

    <TextView
        android:id="@+id/tvIMC"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/imc_number"
        android:textColor="@color/text_color"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/sfpro"/>
    
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nivel_peso"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:fontFamily="@font/sfpro"/>
    <TextView
        android:id="@+id/tvNivelPeso"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel_peso_number"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:fontFamily="@font/sfpro"/>

    <Button
        android:id="@+id/bCalcular"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded_cyan"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_imc"
        android:textColor="@android:color/white"
        android:padding="12dp"/>
</LinearLayout>