<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPaciente.Medicos.MedicoDetalle"
    android:orientation="vertical"
    android:background="@mipmap/medico_detalle"
    android:padding="8dp">
    <ImageView
        android:id="@+id/ivBack"
        android:background="@drawable/button_ripple_gray"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/back_icon_orange"
        android:contentDescription="@string/contacto_programador" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="8dp"
        android:id="@+id/ivMedicoPerfil"
        android:layout_width="240dp"
        android:layout_height="230dp"
        android:src="@mipmap/user_icon_dark"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />
    <TextView
        android:id="@+id/tvMedicoNombre"
        android:fontFamily="@font/sfpro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#292929"
        android:gravity="center"
        android:text="@string/nombre"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvMedicoEspecialidad"
        android:fontFamily="@font/sfpro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#434343"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/especialidad"/>
    <TextView
        android:id="@+id/tvMedicoCorreo"
        android:fontFamily="@font/sfpro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#6F6F6F"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/correo_electronico"/>

    <TextView
        android:id="@+id/tvMedicoUbicacion"
        android:fontFamily="@font/sfpro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#6F6F6F"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="15sp"
        android:text="@string/ubicacion"/>
    <Button
        android:id="@+id/bAgregarMedico"
        android:gravity="center"
        android:fontFamily="@font/sfpro"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_gradient_orange"
        android:paddingHorizontal="16dp"
        android:text="@string/enviar_solicitud"
        android:textColor="@color/colorFondoLogin"/>
</LinearLayout>