<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.historialclinico.MenuMedico.Home.HomeMedicoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_medico" />
    <fragment
        android:id="@+id/nav_pacientes"
        android:name="com.example.historialclinico.MenuMedico.Pacientes.PacientesFragment"
        android:label="Pacientes"
        tools:layout="@layout/fragment_pacientes" />
    <fragment
        android:id="@+id/nav_consultas"
        android:name="com.example.historialclinico.MenuMedico.Consultas.ConsultasFragment"
        android:label="@string/menu_consultas"
        tools:layout="@layout/fragment_consultas" />
    <fragment
        android:id="@+id/nav_confi"
        android:name="com.example.historialclinico.MenuMedico.Configuracion.ConfiguracionFragmentMedico"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion_medico" />
</navigation>