<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPaciente.Clinicas.ClinicasFragment"
    android:background="@color/colorFondoLogin"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="@color/colorFondoLogin"
        android:paddingHorizontal="15dp">

        <ImageView
            android:id="@+id/ivImagenClinicas"
            android:layout_width="442dp"
            android:layout_height="214dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/olvidaste_contra"
            android:gravity="center"
            android:padding="5dp"
            android:src="@mipmap/paciente_hombre_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro"
            android:layout_marginTop="24dp"
            android:text="@string/buscas_clinicas"
            android:textColor="#202020"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro"
            android:layout_marginTop="24dp"
            android:text="@string/buscas_clinicas_desc"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"/>
        <Button
            android:id="@+id/bBuscarClinicas"
            android:background="@drawable/button_rounded_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableTop="@mipmap/search_icon"
            android:drawableTint="@color/colorFondoLogin"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/buscar_clinicas"
            android:textColor="@color/colorFondoLogin"
            android:padding="16dp"/>
    </LinearLayout>

</ScrollView>